Scrolling on mobile bug-fix.

--- a/css/common.less
+++ b/css/common.less
@@ -26,9 +26,12 @@ body {
 }
 
 #container {
-  height: 100vh;
-  width: 100%;
+  // height: 100vh;
+  // width: 100%;
   overflow-x: hidden;
+  position: fixed;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .topSpacer {
